--- a/Curve agents/Curve Agents.csproj
+++ b/Curve agents/Curve Agents.csproj
@@ -53,6 +53,8 @@
   <ItemGroup>
     <Compile Include="CurveAgent.cs" />
     <Compile Include="GH_AgentCurves.cs" />
+    <Compile Include="GH_AgentCurves_02.cs" />
+    <Compile Include="MyComponent1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
