--- a/Curve agents/Curve Agents.csproj
+++ b/Curve agents/Curve Agents.csproj
@@ -51,10 +51,10 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="StigmergyAgent.cs" />
     <Compile Include="CurveAgent.cs" />
     <Compile Include="GH_AgentCurves.cs" />
     <Compile Include="GH_AgentCurves_02.cs" />
-    <Compile Include="MyComponent1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
