--- a/Curve agents/Curve Agents.csproj
+++ b/Curve agents/Curve Agents.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{03CA8082-246A-49BC-82EF-C195C80DBDD0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MeshGrowth</RootNamespace>
-    <AssemblyName>MeshGrowth</AssemblyName>
+    <RootNamespace>CurveAgents</RootNamespace>
+    <AssemblyName>CurveAgents</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <IsWebBootstrapper>false</IsWebBootstrapper>
@@ -51,11 +51,13 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GH_Trails.cs" />
+    <Compile Include="PointAgent.cs" />
+    <Compile Include="GH_Points.cs" />
     <Compile Include="StigmergyAgent.cs" />
-    <Compile Include="CurveAgent.cs" />
     <Compile Include="GH_AgentCurves.cs" />
-    <Compile Include="GH_AgentCurves_02.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TrailAgent.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
